<resources>
    <string name="app_name">Menu Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_fragment_text">Create a textfield where you enter atleast 50 characters.</string>
    <string name="enable_editing">Enable editing in settings.</string>
    <string name="supported_languages">Supported languages: english, finnish (suomi)</string>
    <string name="apply_button_text">Apply text</string>
    <string name="display_text">Display text: </string>
    <string name="text_editable">Text editable: </string>
    <string name="all_caps">All caps: </string>
    <string name="visible">Visible: </string>
    <string name="font_color">Font Color:</string>
    <string name="font_size">Font Size:</string>
    <string name="close_menu">Close menu</string>
    <string name="main_view">Main View</string>
    <string name="settings">Settings</string>
</resources>
