<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/font_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/font_size"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/font_size_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/font_header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/spinner_stroke"
        android:elevation="4dp"
        android:minWidth="150dp"
        android:minHeight="50dp" />

    <TextView
        android:id="@+id/color_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/font_color_spinner"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/font_color"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/font_color_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_header"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/spinner_stroke"
        android:elevation="4dp"
        android:minWidth="150dp"
        android:minHeight="50dp" />

    <TextView
        android:id="@+id/visible_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/font_size_spinner"
        android:layout_alignStart="@+id/font_size_spinner"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/visible"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Switch
        android:id="@+id/visible_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/visible_header"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/visible_header"
        android:checked="true" />

    <TextView
        android:id="@+id/all_caps_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/font_color_spinner"
        android:layout_alignStart="@+id/font_color_spinner"
        android:layout_marginTop="24dp"
        android:text="@string/all_caps"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Switch
        android:id="@+id/all_caps_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/all_caps_header"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/all_caps_header"
        android:checked="false" />

    <TextView
        android:id="@+id/editable_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/visible_header"
        android:layout_alignStart="@+id/visible_header"
        android:layout_marginTop="24dp"
        android:text="@string/text_editable"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Switch
        android:id="@+id/editable_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editable_header"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/editable_header"
        android:checked="false" />

    <ImageView
        android:id="@+id/group_sep"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/editable_header"
        android:layout_marginTop="24dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/title_edittext"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/display_text"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_sep"
        android:layout_marginStart="140dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:inputType="text"
        android:lines="1"
        android:maxEms="35"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/apply_display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_edittext"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/apply_button_text"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/group_sep2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/apply_display_text"
        android:layout_marginTop="24dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/supported_languages_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_sep2"
        android:layout_marginTop="12dp"
        android:text="@string/supported_languages"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/change_language_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/supported_languages_textview"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_language_black_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_language_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Language / kieli"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>